<resources>
    <string name="app_name">Jubicare Premium</string>
    <string name="patientName">Name</string>
    <string name="Gender">Gender</string>
    <string name="DateofBirth">Date of birth</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="family">Profile List</string>
    <string name="Other">Other</string>
    <string name="age_age">Age</string>
    <string name="age">Age (in years)</string>
    <string name="aadhar">Aadhar number</string>
    <string name="enteraadharnumber">Enter your aadhar number</string>
    <string name="Fill_your_health_record">Fill your health record</string>
    <string name="height">Height in cm</string>
    <string name="enteryourheight">Enter your height</string>
    <string name="weight">Weight in kg</string>
    <string name="enteryourweight">Enter your weight</string>
    <string name="diabetic">Diabetic</string>
    <string name="hypertention">Hypertention</string>
    <string name="thyroid">Thyroid</string>
    <string name="hypo">Hypo</string>
    <string name="hyper">Hyper</string>
    <string name="welcome">Welcome to</string>
    <string name="jubicarepremium">JUBICARE PREMIUM </string>
    <string name="wecareforyourhealth">(We care for your health) </string>
    <string name="enteryourmobileno">Enter your mobile no.</string>
    <string name="welcomename">Welcome</string>
    <string name="welcomename1">gust</string>
    <string name="discount">You are eligible for a discounted corporate offer.</string>
    <string name="discountRs">You will have to pay Rs. 99 for availing this service.</string>

    <string name="jubicare_premium">JUBICARE PREMIUM</string>
    <string name="mobile_no">Mobile number</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="new_user">New user</string>
    <string name="age1">Age</string>
    <string name="height1">Height</string>
    <string name="weight1">Weight</string>


    <string name="home">Home</string>
    <string name="take_an_appointment">Take an appointment</string>
    <string name="prescriptions">Old prescriptions</string>
    <string name="appointment">Old appointments</string>
    <string name="report">Reports</string>
    <string name="profile">My profile</string>

    <string name="date">Date</string>
    <string name="doctor_s_name">Doctor\'s name</string>
    <string name="view_appontment">View prescription</string>
    <string name="view_appontment1">View Appointment</string>
    <string name="title">Title</string>
    <string name="view">View</string>

    <string name="Othereligibility">Other eligibility</string>

    <string name="blood">Blood group</string>
    <string name="caste">Caste</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="PatientContact">Contact number</string>
    <string name="Pincode">Pincode</string>
    <string name="state">State</string>
    <string name="District">District</string>
    <string name="SelectBlock">Select block</string>
    <string name="SelectVillage">Select village</string>
    <string name="post_office">Post office</string>
    <string name="is_covered_area">Is covered area?</string>
    <string name="Address">Address</string>
    <string name="PatientEmergencyContact">Emergency contact</string>
    <string name="patient_image">Profile photo</string>
    <string name="symptom_of_patient">Symptom(s) of the patient</string>
    <string name="Symptom">Symptom</string>
    <string name="select_disease">Diseases</string>
    <string name="current_medications">Currently taking any prescribed medication</string>
    <string name="DateofMedicinePrescribed">Date of prescribed medication</string>
    <string name="conducted_any_tests">Conducted any tests</string>
    <string name="DateofTestDone">Date of test</string>
    <string name="doctor_assigned">Doctor assignment</string>
    <string name="DocumentAttachment">Document attachment</string>
    <string name="if_any_emergency_then_check_here">if any emergency then check the box given below.</string>
    <string name="emergency">Emergency</string>
    <string name="blood_oxy">Blood oxygen level (SpO2) in %</string>
    <string name="people">People with disability (PwDs)</string>
    <string name="all_fields_are_mandatory_with_star_in_this_screen">Note: All fields are mandatory with star (<font color='#FF0000'>*</font>) in this screen.</string>



    <string name="kedar">Dr Kedar Das</string>
    <string name="jubicare">Jubicare</string>
    <string name="Village">Village</string>
    <string name="Submit">Submit</string>
    <string name="date1">Date: 12 Feb 2020</string>


    <string name="select_state">Select state</string>
    <string name="select_block">Select block</string>
    <string name="select_village">Select village</string>
    <string name="select_district">Select district</string>
    <string name="select_caste">Select caste</string>
    <string name="spn_post_office">spn post office</string>
    <string name="select_bloodgroup">Select bloodgroup</string>
    <string name="select_post_office">Select postoffice</string>
    <string name="simple_spinner_item">Simple spinner item</string>
    <string name="simple_spinner_item1">Simple spinner item1</string>


    <string name="it_s_okay_reset_your_password">It\'s okay reset your password</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="show_password">Show password</string>




    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="change_password">Change password</string>

    <string name="Otphint2">Please type the verification code sent to</string>
    <string name="Otphint3">Please type the verification code shown on your popup window.</string>
    <string name="Otperror">Resend</string>
    <string name="patient_symptoms">Patient symptoms</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="medicine">Medicine</string>
    <string name="days_of_prescription">Days of prescription</string>
    <string name="prescription_interval">Prescription interval</string>
    <string name="prescription_eating_schedule">Prescription eating schedule</string>
    <string name="prescription_sos">Prescription sos</string>
    <string name="test_name">Test name</string>
    <string name="sub_test_name">Sub test name</string>
    <string name="test_document">Test document</string>
    <string name="if_any_current_medicine_prescription">if any current medicine prescription</string>
    <string name="date_of_prescribed_medication">Date of prescribed medication</string>
    <string name="test_conducted_if_any">Test conducted if any</string>
    <string name="date_of_test">Date of test</string>
    <string name="emergency_case">Emergency case</string>
    <string name="assigned_doctor">Assigned doctor</string>
    <string name="date_of_assigned_doctor">Date of assigned doctor</string>
    <string name="assigned_pharmacist">Assigned pharmacist</string>
    <string name="pharmacist_assignment_date">Pharmacist assignment date</string>
    <string name="medicine_delivered">Medicine delivered</string>
    <string name="is_verified">Is verified</string>
    <string name="assigned_by">Assigned by</string>
    <string name="appointment_type">Appointment type</string>
    <string name="doctor_s_advisory">Doctor\'s advisory</string>
    <string name="consultation_status">Consultation status</string>
    <string name="consultation_completion_time">Consultation completion time</string>
    <string name="pharmacist_drugs_delivery_status">Pharmacist drugs delivery status</string>
    <string name="date_of_phamacists_done">Date of phamacists done</string>
    <string name="view_prescription_click">View prescription click</string>



    <string name="pay_now">Pay Now</string>
    <string name="enteryourorg">Select your organization</string>
    <string name="enteryourempid">Enter your employee ID</string>

    <string name="charges">Charges Rs. <font color='#2A66CC'>199</font> per patient</string>

    <string name="search_by_mobile_or_aadhaar">Search by mobile</string>
    <string name="add_profile">Add profile</string>
    <string name="go_home">Go home</string>
    <string name="permanent_address">Permanent address</string>
    <string name="emergency_contact_number">Emergency contact number</string>
    <string name="click_on_button_for_view_medical_information_details">Click on button for view medical information details</string>
    <string name="location">Location</string>
    <string name="appointment_count">Appointment count</string>
    <string name="no_data_found">No data found</string>
    <string name="select_organization">Select organization</string>
    <string name="select_person">Select person</string>


</resources>